--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -5,6 +5,8 @@
 @import './utils/variables';
 @import './utils/functions';
 
+@import './lib/fix_tweakpane.scss';
+
 #app {
 	font-family: Avenir, Helvetica, Arial, sans-serif;
 	-webkit-font-smoothing: antialiased;
@@ -21,3 +23,4 @@
 		transform: rotate(0deg);
 	}
 }
+
