--- a/assets/styles/utils/_breakpoints.scss
+++ b/assets/styles/utils/_breakpoints.scss
@@ -1,15 +1,11 @@
 $_bp_w: (
-	desktop-lg: 2000px,
-	desktop-md: 1680px,
-	desktop-sm: 1280px,
-	tablet: 987px,
-	tablet-portrait: 987px,
-	tablet-landscape: 987px,
-	tablet-sm: 767px,
-	phone: 576px,
-	phone-landscape: 767px,
-	phone-sm: 400px,
-	phone-xs: 360px,
+	xs: 400px,
+	s: 640px,
+	sm: 768px,
+	md: 1024px,
+	lg: 1200px,
+	xl: 1600px,
+	xxl: 1920px,
 );
 
 $_bp_h: (
