--- a/assets/styles/utils/_variables.scss
+++ b/assets/styles/utils/_variables.scss
@@ -22,6 +22,7 @@ $_easings: (
 	ease_in-cubic: cubic-bezier(0.55, 0.055, 0.675, 0.19),
 	ease_out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1),
 	ease_in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1),
+	out-swift: cubic-bezier(0.55, 0, 0.1, 1),
 );
 
 @forward './functions' with (
