:sparkles: Inte - stuff

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,6 +6,8 @@
 @import './utils/variables';
 @import './utils/functions';
 
+@import './components/animations.scss';
+
 @import './lib/fix_tweakpane.scss';
 
 #app {
