:lipstick: QTE Figure - Add styles on qte

--- a/assets/styles/components/animations.scss
+++ b/assets/styles/components/animations.scss
@@ -43,3 +43,15 @@
 
 	}
 }
+
+@keyframes GrowthRipple {
+	from {
+		transform: scale(1);
+		opacity: 1;
+	}
+
+	to {
+		transform: scale(1.35);
+		opacity: 0;
+	}
+}
