--- a/assets/styles/utils/_variables.scss
+++ b/assets/styles/utils/_variables.scss
@@ -3,6 +3,9 @@ $_colors: (
 	black: #1a1e29,
 
 	test-yellow: #c2d424,
+	f_pink: #FD2BCF,
+	f_purple: #6E2BFD,
+	f_green: #C4FE1F,
 );
 
 // 1st level z-indexes. You can get them with z(Z_INDEX_NAME)
