feat(home): logo

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -14,7 +14,7 @@
 	font-family: Avenir, Helvetica, Arial, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	text-align: center;
-	color: colors(test-yellow);
+	color: colors(black);
 	-moz-osx-font-smoothing: grayscale;
 	// z-index: z(webgl);
 	// transform: rotate(const(angle));
