--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -5,6 +5,7 @@
 @import './utils/touch';
 @import './utils/variables';
 @import './utils/functions';
+@import './utils/fonts';
 
 @import './components/animations.scss';
 
