--- a/assets/styles/utils/_variables.scss
+++ b/assets/styles/utils/_variables.scss
@@ -17,6 +17,9 @@ $_z-indexes: (
 
 // You can get them with const(CONSTANTS)
 $_constants: (
+	font-akira: #{'"AkiraExpanded", -apple-system, Roboto, BlinkMacSystemFont, "Open Sans", "Helvetica Neue", sans-serif'},
+	font-gotham: #{'"Gotham", -apple-system, Roboto, BlinkMacSystemFont, "Open Sans", "Helvetica Neue", sans-serif'},
+	font-tusker: #{'"Tusker", -apple-system, Roboto, BlinkMacSystemFont, "Open Sans", "Helvetica Neue", sans-serif'},
 );
 
 // You can get them with ease(EASING)
