Home style + anime leave

--- a/assets/styles/components/animations.scss
+++ b/assets/styles/components/animations.scss
@@ -55,3 +55,12 @@
 		opacity: 0;
 	}
 }
+
+@keyframes RollingSticker {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
