--- a/assets/styles/components/animations.scss
+++ b/assets/styles/components/animations.scss
@@ -64,3 +64,13 @@
 		transform: rotate(360deg);
 	}
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 100% 50%;
+	}
+
+	100% {
+		background-position: -100% 50%;
+	}
+}
