--- a/assets/styles/utils/_variables.scss
+++ b/assets/styles/utils/_variables.scss
@@ -30,6 +30,7 @@ $_easings: (
 	ease_out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1),
 	ease_in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1),
 	out-swift: cubic-bezier(0.55, 0, 0.1, 1),
+	out-bounce: cubic-bezier(0.17, 0.89, 0.32, 1.27),
 );
 
 @forward './functions' with (
