--- a/assets/styles/utils/_variables.scss
+++ b/assets/styles/utils/_variables.scss
@@ -31,6 +31,7 @@ $_easings: (
 	ease_in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1),
 	out-swift: cubic-bezier(0.55, 0, 0.1, 1),
 	out-bounce: cubic-bezier(0.17, 0.89, 0.32, 1.27),
+	in-out-smooth: cubic-bezier(0.36, 0.07, 0.19, 0.97),
 );
 
 @forward './functions' with (
