feat(stickers): fix localStorage

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -36,4 +36,20 @@
 	font-size: var(--base-text);
 }
 
+.page {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-flow: column nowrap;
 
+	transition: opacity 0.4s ease-out;
+
+	&.is-hide {
+	  opacity: 0;
+	}
+  }
