--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -72,10 +72,31 @@
 	}
 
 	&:hover {
-		.btn-text {
+		span {
 			&::after {
 			transform: scaleX(1);
 			}
 		}
 	}
+
+	span {
+		display: block;
+		position: relative;
+		font-family: const(font-akira);
+		font-weight: 900;
+		font-size: 2.5rem;
+
+		&::after {
+		  content: "";
+		  position: absolute;
+		  display: block;
+		  width: 100%;
+		  height: 1px;
+		  background-color: currentColor;
+		  bottom: -5%;
+		  transform-origin: center center;
+		  transform: scaleX(0);
+		  transition: transform .35s ease(out-swift);
+		}
+	  }
 }
