Add anime on tutoé

--- a/assets/styles/components/animations.scss
+++ b/assets/styles/components/animations.scss
@@ -75,3 +75,24 @@
 	}
 }
 
+@keyframes tutoTouche {
+	0%  {
+		opacity: 1;
+		transform: scale(1);
+	}
+
+	25% {
+		opacity: 0.5;
+		transform: scale(0.8);
+	}
+
+	50% {
+		opacity: 0.5;
+		transform: scale(0.8);
+	}
+
+	100%  {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
