--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -69,3 +69,15 @@
 		max-width: 1200px;
 	}
 }
+
+.lenis.lenis-smooth {
+	scroll-behavior: auto;
+}
+
+.lenis.lenis-stopped {
+	overflow: hidden;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+	overscroll-behavior: contain;
+}
