fix(default): loaded on default.vue

--- a/assets/styles/utils/_reset.scss
+++ b/assets/styles/utils/_reset.scss
@@ -11,7 +11,7 @@
 
 html {
 	height: 100vh; // keyboard ios hack
-	background: #151515;
+	background: white;
 	color: white;
 	font-family: -apple-system, Avenir, Roboto, 'Open Sans', 'Helvetica Neue',
 		sans-serif;
